--- a/js/util/calendar.html
+++ b/js/util/calendar.html
@@ -1,4 +1,4 @@
-<div class="filter-row mui-control-content mui-active" ms-controller="rooms">
+<div class="filter-row mui-control-content mui-active" ms-controller="calendar">
      <div class="time" style="width: 96%;">
         <a id="select_start" href="###" ms-on-touchend="startClick" ms-class="selected: statusControl.isStartEdit">
             入住时间<br><small ms-class="mui-text-danger:!statusControl.isStartEdit">{{startIndex==-1?'选择日期':(calendar[startIndex]?calendar[startIndex].date:'&nbsp;')}}</small>
@@ -24,12 +24,5 @@
             </a>
         </div>
     </div>
-
-    <div style="width: 96%;margin: 10px auto;background-color: #fff;color: #000;padding: 10px;">
-        <div>更多筛选</div>
-        <div ms-repeat="filterList" style="display:inline-block;padding: 5px;">
-            <input type="checkbox" ms-attr-value=el.id ms-duplex-number="selectFilter" ms-attr-checked="selectFilter.indexOf(el.id)>-1" />
-            <label>{{el.name}}</label>
-        </div>
-    </div>
+    <!-- filter -->
 </div>
