--- a/js/util/partTime.html
+++ b/js/util/partTime.html
@@ -53,12 +53,5 @@
             </table>
         </div>
     </div>
-
-    <div style="width: 96%;margin: 10px auto;background-color: #fff;color: #000;padding: 10px;">
-        <div>更多筛选</div>
-        <div ms-repeat="filterList" style="display:inline-block;padding: 5px;">
-            <input type="checkbox" ms-attr-value=el.id ms-duplex-number="selectFilter" ms-attr-checked="selectFilter.indexOf(el.id)>-1" />
-            <label>{{el.name}}</label>
-        </div>
-    </div>
+    <!-- filter -->
 </div>
