修改个人中心页面、增加常用联系人页面

--- a/js/pages/user/user-info.html
+++ b/js/pages/user/user-info.html
@@ -15,7 +15,6 @@
 		background-color: #efeff4;
 	}
 	.mui-pages {
-		top: 46px;
 		height: auto;
 	}
 	.mui-page.mui-transitioning {
@@ -80,9 +79,12 @@
 		</ul>
 		<br />
 		<ul class="mui-table-view">
-			<!-- <li class="mui-table-view-cell">
-				<a href="user-bill.html" class="mui-navigate-right">我的发票</a>
-			</li> -->
+			<li class="mui-table-view-cell">
+				<a href="frequent-contact-list.html" class="mui-navigate-right">入住人信息</a>
+			</li>
+			<li class="mui-table-view-cell">
+				<a href="user-bill.html" class="mui-navigate-right">发票管理</a>
+			</li>
 			<li class="mui-table-view-cell">
 				<a href="about.html" class="mui-navigate-right">关于本酒店</a>
 			</li>
