--- a/js/util/filter.html
+++ b/js/util/filter.html
@@ -1,4 +1,4 @@
-<div ms-controller="filter" style="width: 96%;margin: 10px auto;background-color: #fff;color: #000;padding: 10px;">
+<div ms-controller="filter" style="margin: 10px auto;background-color: #fff;color: #000;padding: 10px;">
     <div>更多筛选</div>
     <div ms-repeat="dayFilter" style="display:inline-block;padding: 5px;" ms-if="type==0">
         <input type="checkbox" ms-attr-value=el.id ms-duplex-number="selectDayFilter" ms-attr-checked="selectDayFilter.indexOf(el.id)>-1" />
