--- a/js/pages/user/user-info.html
+++ b/js/pages/user/user-info.html
@@ -83,7 +83,7 @@
 				<a href="frequent-contact-list.html" class="mui-navigate-right">入住人信息</a>
 			</li>
 			<li class="mui-table-view-cell">
-				<a href="user-bill.html" class="mui-navigate-right">发票管理</a>
+				<a href="invoice-list.html" class="mui-navigate-right">发票管理</a>
 			</li>
 			<li class="mui-table-view-cell">
 				<a href="about.html" class="mui-navigate-right">关于本酒店</a>
