写房间下单的联系人弹窗

--- a/js/pages/room/room.html
+++ b/js/pages/room/room.html
@@ -1,353 +1,90 @@
-<style type="text/css">
-    [ms-controller] {
-        display: none;
-    }
-
-    .mui-preview-image.mui-fullscreen {
-        position: fixed;
-        z-index: 20;
-        background-color: #000;
-    }
-
-    .mui-preview-header,
-    .mui-preview-footer {
-        position: absolute;
-        width: 100%;
-        left: 0;
-        z-index: 10;
-    }
-
-    .mui-preview-header {
-        height: 44px;
-        top: 0;
-    }
-
-    .mui-preview-footer {
-        height: 50px;
-        bottom: 0px;
-    }
-
-    .mui-preview-header .mui-preview-indicator {
-        display: block;
-        line-height: 25px;
-        color: #fff;
-        text-align: center;
-        margin: 15px auto 4;
-        width: 70px;
-        background-color: rgba(0, 0, 0, 0.4);
-        border-radius: 12px;
-        font-size: 16px;
-    }
-
-    .mui-preview-image {
-        display: none;
-        -webkit-animation-duration: 0.5s;
-        animation-duration: 0.5s;
-        -webkit-animation-fill-mode: both;
-        animation-fill-mode: both;
-    }
-
-    .mui-preview-image.mui-preview-in {
-        -webkit-animation-name: fadeIn;
-        animation-name: fadeIn;
-    }
-
-    .mui-preview-image.mui-preview-out {
-        background: none;
-        -webkit-animation-name: fadeOut;
-        animation-name: fadeOut;
-    }
-
-    .mui-preview-image.mui-preview-out .mui-preview-header,
-    .mui-preview-image.mui-preview-out .mui-preview-footer {
-        display: none;
-    }
-
-    .mui-zoom-scroller {
-        position: absolute;
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: flex;
-        -webkit-box-align: center;
-        -webkit-align-items: center;
-        align-items: center;
-        -webkit-box-pack: center;
-        -webkit-justify-content: center;
-        justify-content: center;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        margin: 0;
-        -webkit-backface-visibility: hidden;
-    }
-
-    .mui-zoom-scroller p {
-        position: absolute;
-        top: 75%;
-        left: 1%;
-        z-index: -1;
-    }
-
-    .mui-zoom {
-        -webkit-transform-style: preserve-3d;
-        transform-style: preserve-3d;
-    }
-
-    .mui-slider .mui-slider-group .mui-slider-item img {
-        /*width: auto;*/
-        height: auto;
-        max-width: 100%;
-        max-height: 100%;
-    }
-
-    .mui-android-4-1 .mui-slider .mui-slider-group .mui-slider-item img {
-        width: 100%;
-    }
-
-    .mui-android-4-1 .mui-slider.mui-preview-image .mui-slider-group .mui-slider-item {
-        display: inline-table;
-    }
-
-    .mui-android-4-1 .mui-slider.mui-preview-image .mui-zoom-scroller img {
-        display: table-cell;
-        vertical-align: middle;
-    }
-
-    .mui-preview-loading {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        display: none;
-    }
-
-    .mui-preview-loading.mui-active {
-        display: block;
-    }
-
-    .mui-preview-loading .mui-spinner-white {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        margin-left: -25px;
-        margin-top: -25px;
-        height: 50px;
-        width: 50px;
-    }
-
-    .mui-preview-image img.mui-transitioning {
-        -webkit-transition: -webkit-transform 0.5s ease, opacity 0.5s ease;
-        transition: transform 0.5s ease, opacity 0.5s ease;
-    }
-
-    @-webkit-keyframes fadeIn {
-        0% {
-            opacity: 0;
-        }
-        100% {
-            opacity: 1;
-        }
-    }
-
-    @keyframes fadeIn {
-        0% {
-            opacity: 0;
-        }
-        100% {
-            opacity: 1;
-        }
-    }
-
-    @-webkit-keyframes fadeOut {
-        0% {
-            opacity: 1;
-        }
-        100% {
-            opacity: 0;
-        }
-    }
-
-    @keyframes fadeOut {
-        0% {
-            opacity: 1;
-        }
-        100% {
-            opacity: 0;
-        }
-    }
-
-    p img {
-        max-width: 100%;
-        height: auto;
-    }
-
-    .swiper2 {
-        height: auto !important;
-    }
-
-    .svg-icon {
-        width: 20px;
-        height: 20px;
-        margin: 0;
-    }
-
-    section {
-        margin: 0 auto;
-        width: 95%;
-        z-index: 9;
-        background-color: #fff;
-    }
-    .facility {
-        margin: 0 auto;
-        padding: 8px;
-        white-space: nowrap;
-        overflow-x: scroll;
-        background: #aaa;
-    }
-    .facility img {
-        margin-right: 5px;
-        width: 30px;
-        height: 30px;
-    }
-    .hotel {
-        margin: 0 auto;
-        padding: 10px;
-        position: relative;
-        background-color: #fff;
-    }
-    .hotel div {
-        display: inline-block;
-    }
-    .hotel>span {
-        position: relative;
-        top: 10px;
-        float:right;
-    }
-    .time {
-        margin: 18px auto;
-    }
-    .time p, .checkin p {
-        padding: 10px;
-        font-size: 16px;
-    }
-    .time .time-panel {
-        margin-bottom: 20px;
-        padding: 10px;
-    }
-    .time .time-panel div {
-        display: inline-block;
-        line-height: 15px;
-        width: 33%;
-    }
-    .time .time-clock div {
-        margin: 10px auto;
-        text-align: center;
-    }
-    .time .time-clock div div {
-        display: inline-block;
-        width: 23%;
-        font-size: 15px;
-    }
-    .time .time-clock img {
-        border-radius: 50%;
-        width: 20vw;
-        height: 20vw;
-    }
-    .checkin {
-        margin-top: -10px;
-    }
-    .checkin div {
-        padding: 0 0 20px 10px;
-    }
-</style>
-
-<div ms-controller="room">
-    <div class="swiper-container swiper1" style="z-index: 0;">
-        <div class="swiper-wrapper">
-            <div class="swiper-slide" ms-repeat="room.roomGalleryList" data-repeat-rendered="swiper1Render">
-                <div style="width: 100%;height: 100%;background-size: cover;background-position: center;"  ms-css-background-image="'url(' + urlAPINet + el.imgUrl+')'" ms-attr-data-preview-src="urlAPINet + el.imgUrl" data-preview-group="1" ms-data-tag="el.imgDesc">
+<div id="pullrefresh" class="mui-scroll-wrapper">
+    <div class="mui-scroll">
+        <div ms-controller="room">
+            <div class="swiper-container swiper1" style="z-index: 0;">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide" ms-repeat="room.roomGalleryList" data-repeat-rendered="swiper1Render">
+                        <div style="width: 100%;height: 100%;background-size: cover;background-position: center;"  ms-css-background-image="'url(' + urlAPINet + el.imgUrl+')'" ms-attr-data-preview-src="urlAPINet + el.imgUrl" data-preview-group="1" ms-data-tag="el.imgDesc">
+                        </div>
+                    </div>
+                    <div class="swiper-pagination"></div>
                 </div>
             </div>
-            <div class="swiper-pagination"></div>
-        </div>
-    </div>
-    <section style="margin: -10px auto;">
-        <div class="hotel">
-            <div ms-on-tap="goHotel">
-                <span style="color:gold; font-size:20px;">{{room.hotel.alias}}</span>
-                <span>{{room.name}}</span><br>
-                <span>{{room.hotel.address}}</span><br>
-            </div>
-            <span ms-on-tap="openNav()" class="mui-icon mui-icon-map mui-text-danger" style="font-size: 34px"></span>
-        </div>
-        <div class="facility">
-            <span ms-repeat="room.amenityList">
-                <img ms-attr-src="urlAPINet + el.ico" ms-attr-alt="el.name">{{el.name}}
-            </span>
-        </div>
-        <div class="mui-text-center" style="background: white;padding: 0 28px;">
-            <br />
-            <div class="circle photo" ms-css-background-image="'url('+urlAPINet + room.designer.portraitUrl+')'">
-                &nbsp;
-            </div>
-            <br />
-            <h4 style="display: inline;margin-right: 10px;">{{room.designer.name}}</h4><small style="color:#999;">试睡师</small>
-            <div class="small" style="margin: 20px auto;height: 40px; overflow:hidden;">{{room.designer.message}}</div>
-            <span class="small" style="position: relative;top: -39px;left: 12px;float: right;">...</span>
+            <section style="margin: -10px auto;">
+                <div class="hotel">
+                    <div ms-on-tap="goHotel">
+                        <span style="color:gold; font-size:20px;">{{room.hotel.alias}}</span>
+                        <span>{{room.name}}</span><br>
+                        <span>{{room.hotel.address}}</span><br>
+                    </div>
+                    <span ms-on-tap="openNav()" class="mui-icon mui-icon-map mui-text-danger" style="font-size: 34px"></span>
+                </div>
+                <div class="facility">
+                    <span ms-repeat="room.amenityList">
+                        <img ms-attr-src="urlAPINet + el.ico" ms-attr-alt="el.name">{{el.name}}
+                    </span>
+                </div>
+                <div class="mui-text-center" style="background: white;padding: 0 28px;">
+                    <br />
+                    <div class="circle photo" ms-css-background-image="'url('+urlAPINet + room.designer.portraitUrl+')'">
+                        &nbsp;
+                    </div>
+                    <br />
+                    <h4 style="display: inline;margin-right: 10px;">{{room.designer.name}}</h4><small style="color:#999;">试睡师</small>
+                    <div class="small" style="margin: 20px auto;height: 40px; overflow:hidden;">{{room.designer.message}}</div>
+                    <span class="small" style="position: relative;top: -39px;left: 12px;float: right;">...</span>
 
-            <button class="mui-btn" style="margin-bottom: 30px;" onclick="popover('assess.html',loadUrl)">更多信息</button>
-        </div>
-    </section>
+                    <button class="mui-btn" style="margin-bottom: 30px;" onclick="popover('assess.html',loadUrl)">更多信息</button>
+                </div>
+            </section>
 
-    <section class="time">
-        <p>入住时间</p>
-        <div class="time-panel" ms-on-tap="openTimePanel">
-            <div style="float: left;">
-                {{start|html}}
-            </div>
-            <div style="text-align: center;font-size: 12px;">|<br>{{amount}}<br>|</div>
-            <div style="float: right;text-align: right;">
-                {{end|html}}
-            </div>
-        </div>
-        <hr>
-        <div class="time-clock" ms-if="!type">
-            <span style="color: #fff;background-color: #000;font-size: 12px;padding: 4px;">教你省钱</span>
-            &nbsp;&nbsp;<span style="font-size: 12px;">越晚入住越省钱哦！</span><br>
-            <div>
-                <div ms-repeat="roomNightDiscount">
-                    <img src="./img/icon1.jpg" alt=""><br>
-                    {{el.startTime}}后<br>
-                    ¥ {{el.discount}}
+            <section class="time">
+                <p>入住时间</p>
+                <div class="time-panel" ms-on-tap="openTimePanel">
+                    <div style="float: left;">
+                        {{start|html}}
+                    </div>
+                    <div style="text-align: center;font-size: 12px;">|<br>{{amount}}<br>|</div>
+                    <div style="float: right;text-align: right;">
+                        {{end|html}}
+                    </div>
+                </div>
+                <hr>
+                <div class="time-clock" ms-if="!type">
+                    <span style="color: #fff;background-color: #000;font-size: 12px;padding: 4px;">教你省钱</span>
+                    &nbsp;&nbsp;<span style="font-size: 12px;">越晚入住越省钱哦！</span><br>
+                    <div>
+                        <div ms-repeat="roomNightDiscount">
+                            <img src="./img/icon1.jpg" alt=""><br>
+                            {{el.startTime}}:00后<br>
+                            ¥ {{el.discount}}
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="checkin" ms-on-tap="openCheckin">
+                <p>入住人信息 <span class="mui-icon mui-icon-compose" style="color: #000;float: right;"></span></p>
+                <div ms-repeat="checkinList">
+                    {{el.name}}
+                </div>
+            </section>
+            <div style="width: 95%;padding: 13px 0px;background: #eee;margin: 0 auto;margin-top:20px;">更多房间</div>
+            <div class="swiper-container swiper2">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide" ms-repeat="list" data-repeat-rendered="swiper2Render">
+                        <!-- roomSlide -->
+                    </div>
+                    <div class="swiper-pagination"></div>
                 </div>
             </div>
-        </div>
-    </section>
 
-    <section class="checkin">
-        <p>入住人信息</p>
-        <div>
-            尹小冬 
-        <span class="mui-icon mui-icon-compose" style="float: right;"></span></div>
-    </section>
-    <div style="width: 95%;padding: 13px 0px;background: #eee;margin: 0 auto;margin-top:20px;">更多房间</div>
-    <div class="swiper-container swiper2">
-        <div class="swiper-wrapper">
-            <div class="swiper-slide" ms-repeat="list" data-repeat-rendered="swiper2Render">
-                <!-- roomSlide -->
-            </div>
-            <div class="swiper-pagination"></div>
+            <br><br><br>
+
+            <nav class="mui-bar mui-bar-tab">
+                <h4 class="mui-pull-left" style="margin: 13px;"><span class="error" style="font-weight: lighter;"><span style="font-size:24px;">{{room.minPrice?room.minPrice:room.dayPrice}}</span> 元起</span></h4>
+                <button type="button" class="mui-btn mui-btn-danger mui-pull-right" ms-click="goNext()" ms-attr-disabled="isGoNext">立即预订</button>
+            </nav>
         </div>
     </div>
-
-    <br><br><br>
-
-    <nav class="mui-bar mui-bar-tab">
-        <h4 class="mui-pull-left" style="margin: 13px;"><span class="error" style="font-weight: lighter;"><span style="font-size:24px;">{{room.minPrice?room.minPrice:room.dayPrice}}</span> 元起</span></h4>
-        <button type="button" class="mui-btn mui-btn-danger mui-pull-right" ms-click="goNext()" ms-attr-disabled="isGoNext">立即预订</button>
-    </nav>
 </div>
