修改发票管理分页

--- a/js/pages/user/delivery-address-add.html
+++ b/js/pages/user/delivery-address-add.html
@@ -9,7 +9,7 @@
             添加收货地址
         </div>
         <div class="mui-input-row">
-            <label>收货人姓名</label>
+            <label>姓名</label>
             <input type="text" ms-duplex="name" name="name" class="mui-input-clear" placeholder="收货人姓名">
         </div>
         <div class="mui-input-row">
