--- a/js/pages/user/invoice-apply.html
+++ b/js/pages/user/invoice-apply.html
@@ -13,7 +13,7 @@
 
     .flex0,
     .flex1 {
-        font-size: 17px;
+        font-size: 15px;
         /*color: gray;*/
     }
 
@@ -39,6 +39,9 @@
         margin-top: 0px !important;
     }
 
+    label{
+        font-size: 15px;
+    }
 </style>
 <div ms-controller="invoiceApply" style="padding-bottom: 55px">
     <div class="mui-table-view">
