--- a/js/pages/user/invoice-list.html
+++ b/js/pages/user/invoice-list.html
@@ -16,7 +16,7 @@
     }
 </style>
 <!--下拉刷新容器-->
-<div id="refreshContainer" class="mui-content mui-scroll-wrapper">
+<div id="refreshContainer" class="mui-content mui-scroll-wrapper" style="margin-bottom: 50px">
     <div class="mui-scroll">
         <!--数据列表-->
         <div ms-controller="invoiceList">
@@ -41,7 +41,6 @@
                     </div>
                 </div>
             </div>
-            <br>
         </div>
     </div>
 </div>
